--- a/overlay/AliothFrameworks/res/values/config.xml
+++ b/overlay/AliothFrameworks/res/values/config.xml
@@ -522,4 +522,7 @@
     <integer name="config_sysCPUTempMultiplier">1000</integer>
     <integer name="config_sysBatteryTempMultiplier">10</integer>
 
+    <!-- Whether the device supports Smart Pixels -->
+    <bool name="config_supportSmartPixels">true</bool>
+
 </resources>
