--- a/parts/res/xml/dirac_settings.xml
+++ b/parts/res/xml/dirac_settings.xml
@@ -50,7 +50,7 @@
         android:summary="%s"
         android:icon="@drawable/ic_scenes" />
 
-    <SwitchPreferenceCompat
+    <SwitchPreference
         android:key="dirac_hifi_pref"
         android:defaultValue="false"
         android:title="@string/dirac_hifi_title"
