--- a/parts/res/xml/htsr_settings.xml
+++ b/parts/res/xml/htsr_settings.xml
@@ -2,13 +2,10 @@
 <!--
      Copyright (C) 2015 The CyanogenMod Project
                    2018-2019 The LineageOS Project
-
      Licensed under the Apache License, Version 2.0 (the "License"
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -17,12 +14,11 @@
 -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/dc_dimming_enable_title">
+    android:title="@string/htsr_title"> />
 
-    <SwitchPreference
-        android:key="dc_dimming_enable"
+    <SwitchPreferenceCompat
         android:defaultValue="false"
-        android:icon="@drawable/ic_dcdimming"
-        android:title="@string/dc_dimming_enable_title"
-        android:summary="@string/dc_dimming_enable_summary" />
+        android:key="htsr_enable"
+        android:summary="@string/htsr_enable_summary"
+        android:title="@string/htsr_enable_title" />
 </PreferenceScreen>
